--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "grunt-open": "~0.2.2",
     "grunt-svgmin": "~0.3.0",
     "grunt-autoprefixer": "~0.6.4",
-    "grunt-contrib-jade": "~0.9.1"
+    "grunt-contrib-jade": "~0.9.1",
+    "grunt-static-inline": "~0.1.2",
+    "grunt-contrib-imagemin": "~0.5.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-uglify": "~0.3.1"
   }
 }
