--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-static-inline": "~0.1.2",
     "grunt-contrib-imagemin": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-uglify": "~0.3.1"
+    "grunt-contrib-uglify": "~0.3.1",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
